<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".AttributesDisplayActivity" >

    <TextView
        android:id="@+id/attributesHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/attributesHeading"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/attributesPromptPrefix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/attributesHeading"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/attributesPromptPrefix"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/attributesValuePrefix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/attributesPromptPrefix"
        android:layout_alignBottom="@+id/attributesPromptPrefix"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="120dp"
        android:text="@string/attributesValuePrefix"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:id="@+id/attributesPromptFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/attributesPromptPrefix"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/attributesPromptFirstName"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/attributesValueFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/attributesPromptFirstName"
        android:layout_alignBottom="@+id/attributesPromptFirstName"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="120dp"
        android:text="@string/attributesValueFirstName"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:id="@+id/attributesPromptLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/attributesPromptFirstName"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/attributesPromptLastName"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/attributesValueLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/attributesPromptLastName"
        android:layout_alignBottom="@+id/attributesPromptLastName"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="120dp"
        android:text="@string/attributesValueLastName"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:id="@+id/attributesPromptCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/attributesPromptLastName"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/attributesPromptCity"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/attributesValueCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/attributesPromptCity"
        android:layout_alignBottom="@+id/attributesPromptCity"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="120dp"
        android:text="@string/attributesValueCity"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:id="@+id/attributesPromptCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/attributesPromptCity"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/attributesPromptCountry"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/attributesValueCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/attributesPromptCountry"
        android:layout_alignBottom="@+id/attributesPromptCountry"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="120dp"
        android:text="@string/attributesValueCountry"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/attributesPromptLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/attributesPromptCountry"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/attributesPromptLanguage"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/attributesValueLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/attributesPromptLanguage"
        android:layout_alignBottom="@+id/attributesPromptLanguage"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="120dp"
        android:text="@string/attributesValueLanguage"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/attributesPromptPostalCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/attributesPromptLanguage"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/attributesPromptPostalCode"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/attributesValuePostalCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/attributesPromptPostalCode"
        android:layout_alignBottom="@+id/attributesPromptPostalCode"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="120dp"
        android:text="@string/attributesValuePostalCode"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/attributesPromptPostalAddress"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/attributesPromptPostalCode"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/attributesPromptPostalAddress"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/attributesValuePostalAddress"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/attributesPromptPostalAddress"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/attributesValuePostalAddress"        
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
    <Button
        android:id="@+id/attributesRestart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:onClick="home"
        android:text="@string/attributesPageRestart" />
    
</RelativeLayout>