<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".PaymentStartActivity" >

    <TextView
        android:id="@+id/paymentStartHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/paymentStartHeading"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/paymentStartInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/paymentStartHeading"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/paymentStartInfo"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    
    <TextView
        android:id="@+id/paymentStartCurrencyPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/paymentStartInfo"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/paymentStartCurrencyPrompt"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/paymentStartCurrencyValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/paymentStartCurrencyPrompt"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="120dp"
        android:text="@string/paymentStartCurrencyValue"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:id="@+id/paymentStartAmountPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/paymentStartCurrencyPrompt"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/paymentStartAmountPrompt"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/paymentStartAmountValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/paymentStartAmountPrompt"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="120dp"
        android:text="@string/paymentStartAmountValue"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:id="@+id/paymentStartMethodPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/paymentStartAmountPrompt"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/paymentStartMethodPrompt"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/paymentStartMethodValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/paymentStartMethodPrompt"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/paymentStartMethodValue"
        android:textAppearance="?android:attr/textAppearanceMedium" />    
    
    <Button
        android:id="@+id/paymentStartPayNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:onClick="payNow"
        android:text="@string/paymentStartPayNow" />
    
</RelativeLayout>