<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".PaymentConsentCompleteActivity" >

    <TextView
        android:id="@+id/paymentConsentCompleteHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/paymentConsentCompleteHeading"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/paymentConsentCompleteInfo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/paymentConsentCompleteHeading"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/paymentConsentCompleteInfo"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/paymentConsentCompleteStatusLabel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/paymentConsentCompleteInfo"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/paymentConsentCompleteStatusLabel"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/paymentConsentCompleteStatusValue"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/paymentConsentCompleteStatusLabel"
        android:layout_alignBottom="@+id/paymentConsentCompleteStatusLabel"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="120dp"
        android:text="@string/paymentConsentCompleteStatusValue"        
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
    <TextView
        android:id="@+id/paymentConsentCompleteTransactionIdLabel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/paymentConsentCompleteStatusLabel"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/paymentConsentCompleteTransactionIdLabel"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/paymentConsentCompleteTransactionIdValue"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/paymentConsentCompleteTransactionIdLabel"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/paymentConsentCompleteTransactionIdValue"        
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/paymentConsentCompleteServerReferenceLabel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/paymentConsentCompleteTransactionIdValue"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/paymentConsentCompleteServerReferenceLabel"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/paymentConsentCompleteServerReferenceValue"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/paymentConsentCompleteServerReferenceLabel"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/paymentConsentCompleteServerReferenceValue"        
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
    <Button
        android:id="@+id/paymentConsentCompleteChargeReservation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="80dp"
        android:onClick="claim"
        android:text="@string/paymentConsentCompleteChargeReservation" />
    
    <Button
        android:id="@+id/paymentConsentCompleteQuery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="80dp"
        android:onClick="query"
        android:text="@string/paymentConsentCompleteQuery" />
    
    <Button
        android:id="@+id/completionRestart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:onClick="home"
        android:text="@string/completionPageRestart" />
    
</RelativeLayout>