<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".SignInCompleteActivity" >

    <TextView
        android:id="@+id/signInCompleteHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:text="@string/signInCompleteHeading"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/signInCompleteInfo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signInCompleteHeading"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/signInCompleteInfo"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/signInCompleteID"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signInCompleteInfo"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/signInCompleteID"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/signInCompleteEmailLabel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signInCompleteID"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/signInCompleteEmailLabel"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/signInCompleteEmailValue"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signInCompleteEmailLabel"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/signInCompleteEmailValue"        
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
    <Button
        android:id="@+id/completionAttributes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="30dp"
        android:onClick="displayAttributes"
        android:text="@string/completionAttributes" />
    
    <Button
        android:id="@+id/completionRestart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:onClick="home"
        android:text="@string/completionPageRestart" />
    
</RelativeLayout>